--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-bootstrap": "^2.10.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
-    "react-quill": "^2.0.0-beta.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
